client/my-sites/checkout/checkout-thank-you/marketplace/style.scss
@import "@wordpress/base-styles/breakpoints";
@import "@wordpress/base-styles/mixins";

.marketplace-thank-you__container {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: center;

	.thank-you__container {
		padding-top: var(--masterbar-height);
	}

	.thank-you__container-header {
		min-height: auto;
		padding: 0;

		margin-top: 30px;

		@include break-mobile {
			margin-top: 60px;
		}
	}

	.thank-you__body {
		> div {

			display: flex;
			flex-direction: column;
			width: 100%;

			@include break-mobile {
				width: auto;
				align-items: center;
			}
		}

		div {
			min-width: auto;
		}
	}

	.thank-you__step-section {
		padding: 0;
		margin-bottom: 16px;
		flex-grow: 1;
	}

	.thank-you__header-title,
	.thank-you__header-subtitle {
		text-align: left;
		padding: 0 24px;

		@media ( min-width: 480px ) {
			text-align: center;
			padding: 0 16px;
		}
	}

	.thank-you__header-title {
		/* stylelint-disable-next-line declaration-property-unit-allowed-list */
		font-size: 44px; // typography-exception
		line-height: 60px;
	}

	.thank-you__header-subtitle {
		margin: 8px auto;
		max-width: 600px;
		line-height: 24px;
		font-size: $font-body;
		color: var(--studio-gray-60);
	}

	.thank-you__footer {
		max-width: 1072px;
		display: flex;
		flex-wrap: wrap;

		gap: 30px;
		@include break-mobile {
			gap: 40px;
		}
		justify-content: center;
		margin-bottom: 80px;

		@media ( max-width: 480px ) {
			margin-top: -16px;
		}

		.thank-you__step {
			display: flex;
			flex-direction: column;
			flex-wrap: wrap;
			border-top: none;

			min-width: auto;
			max-width: 100%;

			@include break-mobile {
				min-width: auto;
				max-width: 280px;
			}

			h3 {
				line-height: 20px;
				font-weight: 500;
				font-size: $font-body-small;
				color: var(--studio-gray-100);
				margin-bottom: 5px;
			}

			p {
				line-height: 20px;
				font-size: $font-body-small;
				color: var(--studio-gray-60);
				margin-bottom: 16px;
				padding-right: 0;
			}
		}

		.thank-you__step-cta {
			margin: 0;

			a {
				font-weight: 500;
				font-size: $font-body-small;
				line-height: 20px;
			}
		}

		div {
			max-width: 280px;

			@media ( max-width: 740px ) {
				min-width: auto;
				max-width: 100%;
			}
		}
	}
}

